ui/assets/styles/blue-theme.css
/* ... */
      .radio-list-control li:first-child label {
        border-radius: 2px 0 0 2px; }
    .radio-list-control li:last-child {
      border-radius: 0 3px 3px 0; }
      .radio-list-control li:last-child label {
        border-radius: 0 2px 2px 0; }
    .radio-list-control li:only-child {
      border-radius: 3px; }
      .radio-list-control li:only-child label {
        border-radius: 2px; }
  .radio-list-control label {
    display: inline-block;
    border: 1px solid #acbbc2;
    line-height: 1.2em;
    padding: 4px 11px;
    transition: background-color .2s ease-out;
    cursor: pointer; }
  .radio-list-control input[type="radio"] {
    position: absolute !important;
    top: auto !important;
    width: 1px !important;
    height: 1px !important;
    opacity: 0; }
    .radio-list-control input[type="radio"] + label {
      color: #1f2c33;
      border-color: #acbbc2;
      background-color: #ffffff; }
      .radio-list-control input[type="radio"] + label:hover {
        background-color: #e8f5ff; }
      .radio-list-control input[type="radio"] + label:active {
        border-color: #acbbc2;
        background-color: #e8f5ff; }
    .radio-list-control input[type="radio"]:focus + label {
      border-color: #02659f;
      background-color: #e8f5ff;
      position: relative;
      z-index: 2; }
    .radio-list-control input[type="radio"]:checked + label {
      color: #ffffff;
      border-color: #768d99;
      background-color: #768d99;
      position: relative;
      z-index: 1; }
    .radio-list-control input[type="radio"]:checked:focus + label {
      box-shadow: 0 0 0 2px rgba(30, 135, 227, 0.35);
      position: relative;
      z-index: 2; }
    .radio-list-control input[type="radio"]:checked[disabled] + label {
      background-color: #d6dde1 !important;
      transition: none; }
    .radio-list-control input[type="radio"][disabled] + label {
      transition: none; }
  .radio-list-control + .icon-info {
    margin-left: 5px; }

.service-info {
  margin: -10px 0;
  border-left: 4px solid #429e47; }
  .service-info .service-info-grid {
    display: grid;
    grid-template-columns: max-content auto;
    row-gap: 10px;
    column-gap: 10px;
    padding: 10px 10px 0; }
    .service-info .service-info-grid:last-of-type {
      padding-bottom: 10px; }
  .service-info .service-info-label::after {
    content: ':'; }
  .service-info .service-info-value .service-info-value-sla {
    display: inline-block;
    word-break: break-word;
    line-height: 18px; }
    .service-info .service-info-value .service-info-value-sla:not(:last-child) {
      margin-right: 10px; }
  .service-info .service-name {
    padding-bottom: 5px;
    font-size: 1.5em; }
  .service-info .service-actions {
    justify-self: end; }
  .service-info .service-status {
    display: inline-block;
    padding: 0 4px;
    border-radius: 3px;
    background-color: #429e47;
    color: #ffffff; }
  .service-info.service-status-na-bg {
    border-color: var(--severity-color-na-bg); }
    .service-info.service-status-na-bg .service-status {
      background-color: var(--severity-color-na-bg);
      color: #2a353a; }
  .service-info.service-status-info-bg {
    border-color: var(--severity-color-info-bg); }
    .service-info.service-status-info-bg .service-status {
      background-color: var(--severity-color-info-bg);
      color: #00268e; }
  .service-info.service-status-average-bg {
    border-color: var(--severity-color-average-bg); }
    .service-info.service-status-average-bg .service-status {
      background-color: var(--severity-color-average-bg);
      color: #733100; }
  .service-info.service-status-warning-bg {
    border-color: var(--severity-color-warning-bg); }
    .service-info.service-status-warning-bg .service-status {
      background-color: var(--severity-color-warning-bg);
      color: #734d00; }
  .service-info.service-status-high-bg {
    border-color: var(--severity-color-high-bg); }
    .service-info.service-status-high-bg .service-status {
      background-color: var(--severity-color-high-bg);
      color: #52190b; }
  .service-info.service-status-disaster-bg {
    border-color: var(--severity-color-disaster-bg); }
    .service-info.service-status-disaster-bg .service-status {
      background-color: var(--severity-color-disaster-bg);
      color: #4b0c0c; }

.subfilter-option-grid {
  grid-template-columns: minmax(75px, max-content) auto;
  display: grid;
  margin: 5px 0; }
  .subfilter-option-grid .subfilter-options {
    grid-column: 2 / -1; }

.subfilter,
.subfilter-enabled {
  display: inline-block;
  height: 18px;
  position: relative; }

.subfilter {
  margin-right: 10px;
  white-space: nowrap;
  line-height: 14px;
  height: 16px;
  margin-bottom: 2px; }

.subfilter-enabled {
  background-color: #768d99;
  border-radius: 2px;
  color: #ffffff;
  padding: 0 4px; }
  .subfilter-enabled .link-action {
    color: #ffffff;
    text-decoration: none; }
    .subfilter-enabled .link-action:focus {
      color: #ffffff;
      border-bottom: 2px solid rgba(255, 255, 255, 0.7); }
    .subfilter-enabled .link-action:hover {
      color: #ffffff;
      border-bottom: 1px solid rgba(255, 255, 255, 0.7); }
  .subfilter-enabled sup {
    color: #bfcacf; }

.filter-container.tabfilter-container {
  padding: 0;
  border: 0 none;
  background-color: transparent;
  margin: 0;
  /* All tab filters content container */
  /* Top navigation labels */ }
  .filter-container.tabfilter-container .form-buttons [name="filter_new"],
  .filter-container.tabfilter-container .form-buttons [name="filter_update"] {
    margin-right: 20px; }
  .filter-container.tabfilter-container .tabfilter-content-container {
    border: 1px solid #dfe4e7;
    background-color: #ffffff;
    padding: 10px 0;
    margin-bottom: 6px; }
    .filter-container.tabfilter-container .tabfilter-content-container.tabfilter-collapsed {
      padding: 0 0 10px 0; }
/* ... */

